--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <!--<link rel="icon" href="../../favicon.ico">-->
 
-    <title>Cover Template for Bootstrap</title>
+    <title>Discover new vocabulary in movies</title>
 
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/layout.css" rel="stylesheet">
