--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,29 @@
 
     Discover new vocabulary in movies.
 
+    <div class="search container">
+      <div class="search-input input-group">
+        <form action="/" method="GET">
+          <input type="text"
+                name="q"
+                value="{{query}}"
+                autofocus
+                class="form-control"
+                autocomplete="off"
+                placeholder="Search for...">
+        </form>
+      </div>
+
+      <div class="search-result">
+        {% if result %}
+          {% for item in result %}
+          <div class="search-result-item">
+            <a href="/{{ item.id }}">{{ item.title }}</a>
+          </div>
+          {% endfor %}
+        {% endif %}
+      </div>
+
   </h1>
 
 {% endblock %}
