--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -27,7 +27,7 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
+  background: linear-gradient(to left, #7b4397, #dc2430);
 }
 body {
   color: #fff;
