--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 
-  {{ analysis.movie.title }} ({{ analysis.movie.year }})
+  {{ analysis.media.title }} ({{ analysis.media.year }})
 
   <table>
     {% for item in analysis.word_freqs %}
