split styles for each page

--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -1,4 +1,9 @@
 {% extends "layout.html" %}
+
+{% block header %}
+  <link href="/static/css/analysis.css" rel="stylesheet">
+{% endblock %}
+
 {% block content %}
 
   {{ media.title }} ({{ media.year }})
