--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,9 @@
 {% extends "layout.html" %}
+
+{% block header %}
+  <link href="/static/css/home.css" rel="stylesheet">
+{% endblock %}
+
 {% block content %}
 
   <h1 class="cover-heading">
