--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
 
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/layout.css" rel="stylesheet">
-    <link href="/static/css/home.css" rel="stylesheet">
+    {% block header %}{% endblock %}
   </head>
 
   <body>
@@ -33,8 +33,7 @@
           </div>
 
           <div id="app" class="inner cover">
-            {% block content %}
-            {% endblock %}
+            {% block content %}{% endblock %}
         </div>
 
       </div>
