add search button

--- a/templates/home.html
+++ b/templates/home.html
@@ -15,13 +15,19 @@
     <div class="search container">
       <div class="search-input input-group">
         <form action="/" method="GET">
-          <input type="text"
-                name="q"
-                value="{{query}}"
-                autofocus
-                class="form-control"
-                autocomplete="off"
-                placeholder="Search for ...">
+          <fieldset>
+            <div class="search-wrapper">
+              <input type="text"
+                    class="searchbar"
+                    name="q"
+                    value="{{query}}"
+                    autofocus
+                    class="form-control"
+                    autocomplete="off"
+                    placeholder="Search movie ...">
+              <input class="button searchbutton" type="submit" value="go">
+            </div>
+          </fieldset>
         </form>
       </div>
 
