--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
 
-    {% assets "global" %}
+    {% assets "vendor" %}
       <link href="{{ ASSET_URL }}" rel="stylesheet">
     {% endassets %}
 
