--- a/static/css/layout/body.css
+++ b/static/css/layout/body.css
@@ -10,7 +10,7 @@ body {
 body {
     color: #fff;
     text-align: center;
-    text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
+    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
 }
 
 body .wrapper {
@@ -24,13 +24,6 @@ body .wrapper {
 .wrapper>.container {
     padding-top: 7.5rem;
 }
-
-a,
-a:focus,
-a:hover {
-    color: #fff;
-}
-
 
 @media (min-width: 80rem) {
   body .wrapper {
