--- a/static/css/layout/card.css
+++ b/static/css/layout/card.css
@@ -1,10 +1,19 @@
 .cards {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+
+    justify-content: space-around;
 }
 
 .cards .card {
-    flex: 1;
+    -webkit-box-flex: 1;
+            -ms-flex: 1;
+                flex: 1;
+
     margin: 0.5rem;
     border-radius: .4rem;
     color: #fff;
