--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
 
     Discover new vocabulary in movies.
 
-    <div class="search container">
+    <div class="search">
       <div class="search-input input-group">
         <form action="/" method="GET">
           <div class="search-wrapper">
