fix webkit flexbox issue

--- a/static/css/home/search.css
+++ b/static/css/home/search.css
@@ -51,6 +51,7 @@
 }
 
 .search-result .search-result-item {
+    display: block;
     min-width: 13rem;
     max-width: 13rem;
     margin-bottom: 1.5rem;
