--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block header %}
-  {% assets "analysis" %}
+  {% assets "analysis-css" %}
     <link href="{{ ASSET_URL }}" rel="stylesheet">
   {% endassets %}
 {% endblock %}
