add fanart attribution

--- a/templates/home.html
+++ b/templates/home.html
@@ -51,4 +51,10 @@
     </div>
   </div>
 
+  {% if result %}
+  <footer class="credit">
+    Posters provided by <a href="https://fanart.tv">fanart.tv</a>
+  </footer>
+  {% endif %}
+
 {% endblock %}
