--- a/static/css/home/search.css
+++ b/static/css/home/search.css
@@ -61,7 +61,6 @@
 }
 
 .search-result .search-result-item .header .poster.empty {
-    height: 100%;
     background: rgba(255, 255, 255, 0.2);
 }
 
@@ -69,4 +68,9 @@
     font-size: 0.3em;
     letter-spacing: 0rem;
     padding: 1rem 0.5rem 0 0.5rem;
+}
+
+.credit {
+    margin-top: 5rem;
+    font-size: 0.3em;
 }
