--- a/static/css/home/search.css
+++ b/static/css/home/search.css
@@ -44,6 +44,10 @@
 
 /* RESULT */
 
+.search .search-result-wrapper {
+    padding: 0 3rem 0 3rem;
+}
+
 .search .search-result {
     margin-top: 2rem;
     font-weight: normal;
@@ -65,12 +69,6 @@
 }
 
 .search-result .search-result-item .footer {
-    font-size: 0.3em;
     letter-spacing: 0rem;
     padding: 1rem 0.5rem 0 0.5rem;
-}
-
-.credit {
-    margin-top: 5rem;
-    font-size: 0.3em;
 }
