--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,8 @@
       </form>
     </div>
 
-    <div class="search-result container">
+    <div class="search-result-wrapper">
+      <div class="search-result">
       {% if result %}
         {% for item in result %}
         <div class="search-result-item">
@@ -48,7 +49,9 @@
         </div>
         {% endfor %}
       {% endif %}
+      </div>
     </div>
+
   </div>
 
   {% if result %}
