add GitHub ribbon (CSS only)

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -45,5 +45,8 @@
       </section>
     </main>
 
+    <a class="github-fork-ribbon"
+       href="https://github.com/stephanos/subvoc" title="Fork me">Fork me</a>
+
   </body>
 </html>
