--- a/static/css/home/search.css
+++ b/static/css/home/search.css
@@ -25,9 +25,16 @@
 }
 
 .search .searchbutton {
+    width: 65px;
+    min-width: 65px;
     font-weight: normal;
     margin-left: 1rem;
     padding: 0 1.5rem;
+}
+
+.search .searchbutton.waiting {
+    cursor: default;
+    background-color: #606c76;
 }
 
 
