--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -16,11 +16,9 @@
 
   <div id="app">
 
-    <div class="sk-folding-cube">
-      <div class="sk-cube1 sk-cube"></div>
-      <div class="sk-cube2 sk-cube"></div>
-      <div class="sk-cube4 sk-cube"></div>
-      <div class="sk-cube3 sk-cube"></div>
+    <div class="spinner big">
+      <div class="double-bounce1"></div>
+      <div class="double-bounce2"></div>
     </div>
 
   </div>
