--- a/templates/home.html
+++ b/templates/home.html
@@ -18,17 +18,20 @@
 
   <div class="search">
     <div class="search-input input-group">
-      <form action="/" method="GET">
+      <form id="search" action="/" method="GET">
         <div class="search-wrapper">
           <input type="text"
-                class="searchbar"
-                name="q"
-                value="{{query}}"
-                autofocus
-                class="form-control"
-                autocomplete="off"
-                placeholder="Search movie ...">
-          <input class="button searchbutton" type="submit" value="go">
+                 class="searchbar"
+                 name="q"
+                 value="{{query}}"
+                 autofocus
+                 class="form-control"
+                 autocomplete="off"
+                 placeholder="Search movie ...">
+
+          <input type="submit"
+                 class="button searchbutton"
+                 value="go">
         </div>
       </form>
     </div>
