select word from list

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,9 @@
 
 {% block content %}
 
-  <h1>Discover new vocabulary in movies.</h1>
+  <h1 class="heading">
+    Discover new vocabulary in movies.
+  </h1>
 
   <div class="search">
     <div class="search-input input-group">
