--- a/static/css/analysis/list.css
+++ b/static/css/analysis/list.css
@@ -3,9 +3,7 @@
 }
 
 .word-list .media {
-    margin-top: 2em;
-    font-size: 1.5em;
-    font-weight: bold;
+    margin-top: 4rem;
 }
 
 .word-list .difficulty {
@@ -13,13 +11,17 @@
 }
 
 .word-list .difficulty .group {
-    margin: 1rem 1rem 0 1rem;
+    margin: 1rem 0 0 0.5rem;
     display: inline-block;
     cursor: pointer;
     width: 7rem;
     height: 7rem;
     text-align: center;
     border-color: rgba(255, 255, 255, 0.3);
+}
+
+.word-list .difficulty .group:first-child {
+    margin-left: 0;
 }
 
 .word-list .difficulty .group.active {
@@ -42,6 +44,6 @@
 }
 
 .word-list .word-item .arrow {
-    right: 10px;
+    right: 1rem;
     top: 29%;
 }
