add badge for count in list

--- a/static/css/analysis/list.css
+++ b/static/css/analysis/list.css
@@ -43,6 +43,10 @@
     cursor: pointer;
 }
 
+.word-list .word-item .count {
+    margin-left: 1rem;
+}
+
 .word-list .word-item .arrow {
     right: 1rem;
     top: 29%;
