--- a/static/css/analysis/base.css
+++ b/static/css/analysis/base.css
@@ -38,7 +38,14 @@
     padding: 1rem;
     margin-top: 0.8rem;
     border-radius: .4rem;
-    border: .1rem solid #fff;
+    border-color: rgba(255, 255, 255, 0.3);
+    border-width: .1rem;
+    border-style: solid;
+}
+
+.card.active {
+    font-weight: bold;
+    border-color: #fff;
 }
 
 .arrow {
