--- a/static/css/analysis/base.css
+++ b/static/css/analysis/base.css
@@ -41,16 +41,45 @@
 }
 
 .arrow {
+    font-size: 0;
+    line-height: 0;
+
     position: absolute;
+    top: 50%;
 
-    font-size: 20px;
-    font-weight: bold;
-    line-height: 1;
-    opacity: .75;
-    color: white;
-    -webkit-font-smoothing: antialiased;
+    display: block;
 
-    height: 20px;
     width: 20px;
+    height: 20px;
+    padding: 0;
+    -webkit-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+
+    cursor: pointer;
+
+    color: transparent;
+    border: none;
+    outline: none;
+    background: transparent;
 }
 
+.arrow.left:before,
+.arrow.right:before {
+    font-family: 'slick';
+    font-size: 20px;
+    line-height: 1;
+
+    opacity: .75;
+    color: white;
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.arrow.left:before {
+    content: '←';
+}
+.arrow.right:before {
+    content: '→';
+}
