remove unused CSS class

--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
   </h1>
 
   <div class="search">
-    <div class="search-input input-group">
+    <div class="search-input">
       <form id="search" action="/" method="GET">
         <div class="search-wrapper">
           <input type="text"
