--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
 {% block content %}
 
   <h1 class="heading">
-    Discover new vocabulary in movies.
+    Use movies to discover new vocabulary.
   </h1>
 
   <div class="search">
