--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <!--<link rel="icon" href="../../favicon.ico">-->
 
-    <title>Discover new vocabulary in movies</title>
+    <title>Use movies to discover new vocabulary</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
 
