--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,8 +30,7 @@
 
   <body>
 
-    <main class="wrapper">
-
+    <main id="main" class="wrapper">
       <nav class="navigation">
         <section class="container">
           <a class="navigation-title" href="/">
