more reasonable size for bigger screens

--- a/static/css/layout/body.css
+++ b/static/css/layout/body.css
@@ -19,3 +19,9 @@ body .wrapper {
     margin: 0 auto;
     width: 100%;
 }
+
+@media (min-width: 40rem) {
+    .container {
+        max-width: 60rem;
+    }
+}
