use icon on search button

--- a/templates/home.html
+++ b/templates/home.html
@@ -31,9 +31,10 @@
                  autocomplete="off"
                  placeholder="Search movie ...">
 
-          <input type="submit"
-                 class="button searchbutton"
-                 value="go">
+          <button type="submit"
+                  class="button searchbutton">
+            <i class="fa fa-search" aria-hidden="true"></i>
+          </button>
         </div>
       </form>
     </div>
