--- a/templates/bootstrap.html
+++ b/templates/bootstrap.html
@@ -21,7 +21,7 @@
 
 {% block body %}
   <section class="container">
-    <div class="spinner big">
+    <div class="spinner big centered">
       <div class="double-bounce1"></div>
       <div class="double-bounce2"></div>
     </div>
