use axios instead of jQuery for API calls

--- a/templates/bootstrap.html
+++ b/templates/bootstrap.html
@@ -10,7 +10,7 @@
       <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
     {% endif %}
 
-    {% assets "react-util-js" %}
+    {% assets "util-js" %}
       <script src="{{ ASSET_URL }}"></script>
     {% endassets %}
 
