--- a/templates/bootstrap.html
+++ b/templates/bootstrap.html
@@ -1,23 +1,5 @@
 {% extends "layout.html" %}
 
-{% block header %}
-    {% if config['DEBUG'] %}
-      {% assets "react-js" %}
-        <script src="{{ ASSET_URL }}"></script>
-      {% endassets %}
-    {% else %}  
-      <script src="https://unpkg.com/react@15/dist/react.min.js"></script>
-      <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
-    {% endif %}
-
-    {% assets "util-js" %}
-      <script src="{{ ASSET_URL }}"></script>
-    {% endassets %}
-
-    {% assets "app-js" %}
-      <script src="{{ ASSET_URL }}"></script>
-    {% endassets %}
-{% endblock %}
 
 {% block body %}
   <section class="container">
@@ -26,4 +8,24 @@
       <div class="double-bounce2"></div>
     </div>
   </section>
+{% endblock %}
+
+
+{% block footer %}
+  {% if config['DEBUG'] %}
+    {% assets "react-js" %}
+      <script src="{{ ASSET_URL }}"></script>
+    {% endassets %}
+  {% else %}  
+    <script src="https://unpkg.com/react@15/dist/react.min.js"></script>
+    <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
+  {% endif %}
+
+  {% assets "util-js" %}
+    <script src="{{ ASSET_URL }}"></script>
+  {% endassets %}
+
+  {% assets "app-js" %}
+    <script src="{{ ASSET_URL }}"></script>
+  {% endassets %}
 {% endblock %}
